修改top 审核人：田海亮

--- a/views/widget/top/top_liuxue.html
+++ b/views/widget/top/top_liuxue.html
@@ -6,6 +6,8 @@
           </div>
         <div class="top-con-right">
         <span class="top_phone"><i></i></span>
+        {#<span style="position: relative;margin-right: 5px;"><a style="font-size: 12px;" target="_blank" id="" rel="nofollow">消息</a><i class="text_shu" style="font-size: 12px;top: -7px">9</i></span>
+        <span class="bor"></span>#}
         <span><a target="_blank" id="getloginUser" class="dui-text-warning-ss" rel="nofollow">注册</a></span>
         <span class="bor"></span>
         <span ><a href="javascript:void(0);" style="background: #fff;" id="getloginUser_deng" class="dui-text-warning-ss" rel="nofollow">登录</a></span>
@@ -225,6 +227,18 @@ input[type="checkbox"] {
     .top_400{
       width: 12px;
       height: 12px;
+    }
+    .text_shu{
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background: #C13232;
+      color: #fff;
+      position: absolute;
+      top: 0px;
+      left: 20px;
+      text-align: center;
+      line-height: 15px;
     }
 </style>
 <!-- 登录 -->
