--- a/views/index.html
+++ b/views/index.html
@@ -512,7 +512,7 @@
                   '</div>'+
                   '<div class="top-con-right">'+
                   '<ul>'+
-                  '<li class="msg-icon iconfont nav-name" style="position: relative;margin-right: 5px;"><a style="font-size: 12px;" target="_blank" id="" rel="nofollow">消息</a><i class="text_shu" style="font-size: 12px;">99</i></li>'
+                  '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" id="" rel="nofollow">消息</a><i class="text_shu" style="font-size: 12px;">9</i></li>';
         if (login_nickname.usertype == 1) {
           val += '<li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="' + fn.urlgen("user_center", "revcomment") + '" rel="nofollow">'+ login_nickname.nickname +'</a></span></li>';
         } else if (login_nickname.usertype == 2) {
