--- a/views/widget/top/top_liuxue.html
+++ b/views/widget/top/top_liuxue.html
@@ -1,4 +1,4 @@
-<div class="top" style="position:relative;z-index: 1002;">
+<div class="top" style="position:relative;z-index: 1002;" data-uinfo="{{index_userinfo.unread_num}}">
     <div class="dui-layout-lg top-con" style="position: relative;">
         <div class="top-con-left">
             <img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">
