--- a/views/index.html
+++ b/views/index.html
@@ -487,7 +487,9 @@
 
   //top切换
   var login_nickname = JSON.parse(cookie('login_ss'));
-      console.log('login_nickname',login_nickname);
+      // console.log('login_nickname',login_nickname);
+      var userinfo_num = $('.top').data('uinfo')
+      console.log('userinfo_num',userinfo_num);
       var user_type;
       if (login_nickname == null) {
         // var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
@@ -505,14 +507,19 @@
         // $(".top").append(val);
       } else {
         $(".top").empty();
+        
         var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
                   '<div class="top-con-left">'+
                   '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400" style="margin-right: 3px;">'+
                   '<span style="font-size: 12px;color: #666;">400-010-8000</span>'+
                   '</div>'+
                   '<div class="top-con-right">'+
-                  '<ul>'+
-                  '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" id="" rel="nofollow">消息</a><i class="text_shu" style="font-size: 12px;">9</i></li>';
+                  '<ul>';
+        // if (userinfo_num != 0) {
+          val += '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" href="' + fn.urlgen("user_center", "revmsg") + '" rel="nofollow">消息</a><i class="text_shu" style="font-size: 12px;">'+userinfo_num+'</i></li>';
+        // } else {
+        //   val += '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" id="" rel="nofollow">消息</a></li>';
+        // }  
         if (login_nickname.usertype == 1) {
           val += '<li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="' + fn.urlgen("user_center", "revcomment") + '" rel="nofollow">'+ login_nickname.nickname +'</a></span></li>';
         } else if (login_nickname.usertype == 2) {
