--- a/views/about/contact.html
+++ b/views/about/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 {% include "header_new.html" %}
-<style type="text/css">
-.voucher{position:absolute;top:0;left:0;z-index:100009;width:100%;}
+<style>
+  .voucher{position:absolute;top:0;left:0;z-index:100009;width:100%;}
 .voucherLink{position:fixed;top:50%;left:50%;z-index:100010;margin:-250px 0 0 -382px;width:766px;height:500px;}
 .voucherLink .voucherclose{display:block;background:url({{helper.cdnhost}}/assets/img/indexpop_close.png) no-repeat 50% 50%;position:absolute;top:0;right:0;height:50px;cursor:pointer;
 width:50px;}
@@ -12,21 +12,37 @@ width:50px;}
 .collectInfo>h3{height:44px;background-color:#c13232;color:#fff;text-align:center;font-weight:400;font-size:18px;line-height:44px;}
 .form-group{margin-bottom:20px;}
 .form-group .infoType{position:relative;display:inline-block;margin-right:18px;color:#333;font-size:14px;}
-.form-group .infoType::after{position:absolute;top:3px;left:-10px;color:#c13232;content:"*";font-size:16px;}
+.form-group .infoType::after{position:absolute; display: block; top:3px;left:-10px;color:#c13232;content:"*";font-size:16px;}
 .formControl{width:800px;height:180px;border:solid 1px #dcdcdc;border-radius:4px;resize:none;}
 .checkRadio{display:inline-block;font-size:0;}
 .checkRadio label{position:relative;display:inline-block;margin-right:20px;width:90px;height:24px;border:solid 1px #dcdcdc;border-radius:4px;color:#666;text-align:center;font-size:14px;line-height:24px;}
 .checkRadio input[type=radio]+i{position:absolute;top:0;right:0;bottom:0;left:0;border:transparent;border-radius:4px;}
 .checkRadio input[type=radio]:checked+i{border:solid 1px #c13232;background:url({{helper.cdnhost}}/assets/img/arrow.png) no-repeat right top;}
 .checkRadio .checked{color:#C13232;}
+.checkRadio input[type=radio]{ opacity: 0;filter:alpha(opacity=0);position: absolute;}
 .selectControl{width:200px;height:24px;border:solid 1px #dcdcdc;background: url({{helper.cdnhost}}/assets/img/feedback.png) no-repeat right 5px center;color: #666; border-radius:4px;text-indent:10px;}
 .areaContent{position:relative;display:inline-block;width:800px;}
 .areaContent span{position:absolute;right:20px;bottom:14px;color:#999;font-size:12px;}
 .lengendInfo{position:relative;margin-top:14px;margin-bottom:20px;margin-left:90px;color:#C13232;font-size:14px;display: none;}
 .lengendInfo::before{display:inline-block;margin-right:4px;width:15px;height:15px;border-radius:50%;background:#c13232;color:#fff;content:"X";text-align:center;font-size:10px;line-height:14px;}
 .picUpload{margin-right:18px;color:#333;font-size:14px;}
+.upload{ display: inline-block;}
+.upload input[type='file']{ width: 80px;height: 80px;opacity: 0;border:solid 1px #dcdcdc;}
+.pictuerArea{ display: inline-block;width:80px;height:80px;position:relative;margin-right:12px;}
+.pictuerArea .close{ 
+  position: absolute;
+  top: -11px;right: -5px;
+  cursor: pointer; 
+  font-size:8px;
+  height: 15px;
+  width:15px; 
+  background: url({{helper.cdnhost}}/assets/img/close.png) no-repeat center center;
+}
+.pictuerArea img{ height: 80px;width:80px;}
+.pictueAdd{border:solid 1px #dcdcdc;background: url({{helper.cdnhost}}/assets/img/uploada.png) no-repeat center center;}
 .subMit{margin-bottom:20px;text-align:center;}
 .subMit button{width:180px;height:40px;border:none;border-radius:4px;background:#c13232;color:#fff;text-align:center;font-size:16px;}
+
 </style>
 </head>
 <body style="background: #f5f5f5;">
@@ -239,6 +255,20 @@ width:50px;}
             </div>
             <div class="form-group">
               <label class="picUpload">上传图片：</label>
+              <div class="upload">
+                <div class="pictuerArea">
+                  <img src="http://images.jjl.cn/avatar/000/00/01/33_avatar_small_1521009960.jpg" alt="">
+                  <span class="close"></span>
+                </div>
+                <div class="pictuerArea">
+                    <img src="http://images.jjl.cn/avatar/000/00/01/33_avatar_small_1521009960.jpg" alt="">
+                    <span class="close"></span>
+                </div>
+                <div class="pictuerArea pictueAdd">
+                    <input type="file" name="" id="">
+                </div> 
+              </div>
+              <p style="color:#999;margin-left:90px;margin-top:15px;">最多可上传5张照片，支持jpg/png格式，单图不超过2M</p>
             </div>
             <div class="subMit">
               <button type="button">提交建议</button>
@@ -298,9 +328,9 @@ width:50px;}
     })
     //
     var maxVal = 500 //最大文本数字
-    $(".formControl").keyup(function(){
+    $(".formControl").on('keyup',function(){
       var iNum = $(this).val().length //获取文本输入的字数
-      var wordNum = maxVal - iNum //还可以输入的字数 
+      var wordNum = maxVal - iNum //还可以输入的字数
       if(iNum > maxVal){
         $(this).val($(this).val().substring(0, maxVal))
       }
