--- a/views/widget2/message/message.html
+++ b/views/widget2/message/message.html
@@ -4,6 +4,6 @@
             <span class="text">{{msgItem.content | replace_em() | safe}}</span>
             <span class="btn-text"></span>
         </div>
-        <div class="msg-info-time">{{msgItem.inputtime | getDefaultFormat('YYYY-MM-DD HH:mm:ss')}}</div>
+        <div class="msg-info-time">{{msgItem.add_time | getDefaultFormat('YYYY-MM-DD HH:mm:ss')}}</div>
     </div>
 </div>
