--- a/views/center_message.html
+++ b/views/center_message.html
@@ -104,10 +104,14 @@
 {% endif %}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
-{% if userinfo.adviser_type==1 %}
+{% if userinfo.usertype == 1 %}
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
-{% elseif  userinfo.adviser_type==2 %}
-<script src="{{helper.cdnhost}}/assets/js/slide_yimin.js"></script>
+{% elseif userinfo.usertype == 2 %}
+    {% if userinfo.adviser_type==1 %}
+    <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+    {% elseif  userinfo.adviser_type==2 %}
+    <script src="{{helper.cdnhost}}/assets/js/slide_yimin.js"></script>
+    {% endif %}
 {% endif %}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
