--- a/views/widget/new_slide/new_slide2.html
+++ b/views/widget/new_slide/new_slide2.html
@@ -8,7 +8,7 @@
       <div class="quick_links_panel">
         <ul>
           <li style="height: 118px;padding:0;position: relative;display: none" class="jiang"><img src="{{helper.cdnhost}}/assets/img/jiang.gif" alt="" style="max-width: none;position: absolute;left:50%;margin-left: -22px;"></li>
-          <li class="on zixun message_list current" id="zxzx" style="background: #c13232;">
+          <li class="on zixun message_list current" id="zxzx" style="background: #c13232;cursor: default;">
 
             <img src="{{helper.cdnhost}}/assets/img/phone.gif" alt="立即咨询" class="quick-img" style="width: 26px;">
             <span>立<br>即<br>咨<br>询</span>
