--- a/views/widget/new_slide_yimin/new_slide2.html
+++ b/views/widget/new_slide_yimin/new_slide2.html
@@ -2,12 +2,12 @@
 
 {% macro leyu_slide(helper) %}
 <div class="mui-mbar-tabs" style="z-index:999">
-  <div class="quick_links_wrap quick_links_dockright">
+  <div class="quick_links_wrap quick_links_dockright" style="top:200px;">
     <div class="quick_link_mian">
 
       <div class="quick_links_panel">
         <ul>
-          <li class="on zixun message_list current" id="zxzx" style="background: #c13232;">
+          <li class="on zixun message_list current" id="zxzx" style="background: #c13232;cursor: default;">
 
             <img src="{{helper.cdnhost}}/assets/img/phone.gif" alt="立即咨询" class="quick-img" style="width: 26px;">
             <span>立<br>即<br>咨<br>询</span>
