首页下拉框 热门签儿快速搜索 审核人：海亮

--- a/views/widget/new_nav_first/nav_login.html
+++ b/views/widget/new_nav_first/nav_login.html
@@ -13,14 +13,24 @@
             <div class="new-searchs new-home-search">
                 <div class="search-type-box">
                     <div class="search-type"><span class="search-type-text" id="searchType">留学</span><i class="iconfont go-down" style="font-size: 12px;">&#xe8ca;</i></div>
-                    <ul class="search-type-ul">
+                    <!--<ul class="search-type-ul">
                         <li>留学</li>
-                        <!--<li>移民</li>-->
-                    </ul>
+                        &lt;!&ndash;<li>移民</li>&ndash;&gt;
+                    </ul>-->
                 </div>
                 <input type="text" id="search" placeholder="请输入搜索关键词" class="text text-nav"
                        onblur="if(this.value == ''){this.placeholder= '请输入搜索关键词';}">
                 <div class="search-btn" id="searchBtn" style="cursor: pointer;"><i class="city-icon iconfont">&#xe60c;</i></div>
+                <div class="hot-tags-box" id="hot-tags-box">
+                    <div class="hot-tags-title">热门搜索</div>
+                    <div class="hot-tags-cont">
+                        <span>美国留学</span>
+                        <span>英国留学</span>
+                        <span>澳大利亚留学</span>
+                        <span>留学案例</span>
+                        <span>留学生活</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
