--- a/views/widget/new_nav_first/new_nav_first.html
+++ b/views/widget/new_nav_first/new_nav_first.html
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="city-box-body">
-                        <div class="current-city">&lt;返回当前城市</div>
+                        <div class="current-city" id="back-current-city">&lt;返回当前城市</div>
                         <div class="city-colum clearfix" id="home-citys">
                             <ul class="colum-left">
                                 <li class="clearfix">
@@ -192,6 +192,16 @@
                 <input type="text" id="search" placeholder="请输入搜索关键词" class="text text-nav"
                        onblur="if(this.value == ''){this.placeholder= '请输入搜索关键词';}">
                 <div class="search-btn" id="searchBtn" style="cursor: pointer;"><i class="city-icon iconfont">&#xe60c;</i></div>
+                <div class="hot-tags-box" id="hot-tags-box">
+                    <div class="hot-tags-title">热门搜索</div>
+                    <div class="hot-tags-cont">
+                        <span>美国留学</span>
+                        <span>英国留学</span>
+                        <span>澳大利亚留学</span>
+                        <span>留学案例</span>
+                        <span>留学生活</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
