--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -293,6 +293,15 @@ form, input {
     border: 1px solid #dcdcdc;
     border-right: none;
 }
+.new_nav_first .nav-right .search-type-box .search-type:after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 18px;
+    border-right: 1px solid #DCDCDC;
+    right: 0;
+    top: 6px;
+}
 .new_nav_first .nav-right .search-type-box .search-type .search-type-text {
     padding-right: 2px;
 }
@@ -302,10 +311,11 @@ form, input {
     top: 0;
     z-index: 998;
     display: none;
+    border: 1px solid #DCDCDC;
 }
 .new_nav_first .nav-right .search-type-box .search-type-ul li{
     background-color: #fff;
-    width: 39px;
+    width: 38px;
     height: 30px;
     padding-left: 10px;
     line-height: 30px;
@@ -356,20 +366,41 @@ form, input {
     color:#fff;
     line-height: 30px;
 }
-.new_nav_first .tags{
-    width:300px;
+.new_nav_first .new-home-search .hot-tags-box {
+    width: 348px;
+    height: 132px;
+    position: absolute;
+    z-index: 2;
+    background-color: #fff;
+    top: 32px;
+    right: 0;
+    border: 1px solid #DCDCDC;
+    display: none;
+}
+.new_nav_first .new-home-search .hot-tags-box .hot-tags-title {
+    margin: 0 10px;
     height: 30px;
-    margin-top: 10px;
-}
-.new_nav_first .tags span{
+    line-height: 30px;
+    border-bottom: 1px solid #DCDCDC;
     font-size: 12px;
+    color: #999;
 }
-.new_nav_first .tags span a{
-    margin: 0 3px;
-    color: #c13232;
+.new_nav_first .new-home-search .hot-tags-box .hot-tags-cont {
+    font-size: 0;
+    padding: 10px 23px;
 }
-
-
+.new_nav_first .new-home-search .hot-tags-box .hot-tags-cont span {
+    display: inline-block;
+    height: 20px;
+    line-height: 20px;
+    padding: 0 10px;
+    border-radius: 10px;
+    background-color: rgba(193,50,50,0.06);
+    cursor: pointer;
+    font-size: 12px;
+    color: #C13232;
+    margin: 10px 11px;
+}
 .new_nav_first .top-div{
     width: 560px;
     margin: 0 auto;
