--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -12,7 +12,7 @@
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/culture') }}">企业文化</a></li>
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about') }}#honor">企业荣誉</a></li>
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/contact') }}">联系我们</a></li>
-          <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/contact') }}">意见反馈</a></li>
+          <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/contact') }}#Suggestions">意见反馈</a></li>
         </ul>
         <ul>
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/events') }}">大事记</a></li>
